[tool.poetry]
name = "notify-server"
version = "0.1.0"
description = ""
authors = ["amit lissack <amit@opentrons.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyzmq = "^19.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
